--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,9 @@ description = "Implements server-side handling for a simple user name/password a
 
 [dependencies]
 # database = { git = "https://github.com/Lut99/database-rs" }
-error-trace = { git = "https://github.com/Lut99/error-trace-rs" }
-log = "0.4"
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-argon2 = "0.5"
-warp = "0.3"
+argon2 = { version = "0.5", features = ["std"] }
+# error-trace = { git = "https://github.com/Lut99/error-trace-rs" }
+# log = "0.4"
+# serde = { version = "1.0", features = ["derive"] }
+# serde_json = "1.0"
+# warp = "0.3"
