--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,21 @@ description = "Implements server-side handling for a simple user name/password a
 
 [dependencies]
 # database = { git = "https://github.com/Lut99/database-rs" }
-argon2 = { version = "0.5", features = ["std"] }
+argon2 = { version = "0.5", features = ["std"], optional = true }
+derive = { path = "./derive", optional = true }
 # error-trace = { git = "https://github.com/Lut99/error-trace-rs" }
 # log = "0.4"
 # serde = { version = "1.0", features = ["derive"] }
 # serde_json = "1.0"
 # warp = "0.3"
+
+
+[features]
+default = [ "password" ]
+derive = [ "dep:derive" ]
+password = [ "derive/password", "dep:argon2" ]
+
+
+[workspace]
+resolver = "2"
+members = ["derive"]
